# hs-music

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  hs-music.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: HsMusic.hs  Lib.hs  Main.hs
test/: Spec.hs
