name:                hs-music
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ssipos90/hs-music#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Sipos
maintainer:          sebastiansipos90@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-music
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4.5.0 && < 1.4.6
                     , bytestring >= 0.10.8.2 && < 0.10.9
                     , directory >= 1.3.3.0 && < 1.3.4
                     , text >= 1.2.3.1 && < 1.2.4
                     , process >= 1.6.5.0 && < 1.6.6
                     , protolude >= 0.2.3 && < 0.2.4
                     , url >= 2.1.3 && < 2.1.4